@@ -803,7 +803,12 @@ function checkQuestions() {
     		r.select('input[type=text]').each(function (s) {s.value ? finished[count] = 1 : null;});
     		r.select('select').each(function (s) {s.value ? finished[count] = 1 : null;});
     	} else if (r.hasClassName('rawTextQuestion')) {
-    		r.select('textarea').each(function (s) {s.value ? finished[count] = 1 : null;});
+    		for (var i = 0; i <  tinyMCE.editors.length; i++) {
+    			if (tinyMCE.editors[i].getContent()) {
+    				finished[count] = 1;
+    			}
+    		};
+    		//r.select('textarea').each(function (s) {s.value ? finished[count] = 1 : null;});
     	} else if (r.hasClassName('dragDropQuestion')) {
     		r.select('td.dragDropTarget').each(function (s) {s.childElements().length ? finished[count] = 1 : null;});
     	} 						        								        	
